<resources>
    <string name="app_name">RegisterForm</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="female">female</string>
    <string name="age">age</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="address">address</string>
    <string name="button">Button</string>
    <string name="togglebutton">ToggleButton</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="color_orange">Color Orange</string>
</resources>