<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/registerback">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:autofillHints=""
                android:background="@drawable/fields"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:padding="20dp"
                android:layout_marginTop="350sp"
                android:layout_marginStart="30dp"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="20dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:autofillHints=""
                android:background="@drawable/fields"
                android:hint="@string/username"
                android:textColorHint="@color/black"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:drawableStart="@drawable/baseline_supervised_user_circle_24"
                android:drawablePadding="20dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/pass"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:autofillHints=""
                android:background="@drawable/fields"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:drawableStart="@drawable/baseline_key_24"
                android:drawablePadding="20dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/confirmpass"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:autofillHints=""
                android:background="@drawable/fields"
                android:hint="Confirm Password"
                android:textColorHint="@color/black"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:drawableStart="@drawable/baseline_check_circle_outline_24"
                android:drawablePadding="20dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:autofillHints=""
                android:ems="10"
                android:background="@drawable/fields"
                android:hint="@string/phone_number"
                android:drawableStart="@drawable/baseline_phone_iphone_24"
                android:textColorHint="@color/black"
                android:padding="20dp"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:drawablePadding="20dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/address"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:autofillHints=""
                android:ems="10"
                android:background="@drawable/fields"
                android:hint="@string/address"
                android:drawableStart="@drawable/baseline_location_pin_24"
                android:textColorHint="@color/black"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:drawablePadding="20dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/city"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:autofillHints=""
                android:ems="10"
                android:background="@drawable/fields"
                android:hint="@string/city"
                android:drawableStart="@drawable/baseline_location_city_24"
                android:textColorHint="@color/black"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:drawablePadding="20dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Gender"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="-30dp"
                android:textColor="@color/black"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="male"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="30dp"
                        android:textSize="20sp"/>

                    <RadioButton
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/female"
                        android:layout_marginTop="30dp"/>
                </RadioGroup>

            </RelativeLayout>


            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:hint="Register"
                android:layout_gravity="center"
                android:backgroundTint="#38955F"
                android:textColorHint="@color/white"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>